Around 1 percent of resume attempts fail on Asus Zenbook UM425IA (Renoir 4500U)
It looks like #1629 (closed) is still not entirely fixed on my machine. I am running a Fedora 5.14.6 kernel with https://git.kernel.org/pub/scm/linux/kernel/git/pdx86/platform-drivers-x86.git/commit/?h=review-hans&id=3c3c8e88c8712bfe06cd10d7ca77a94a33610cd6 and https://github.com/torvalds/linux/commit/fa209644a7124b3f4cf811ced55daef49ae39ac6 included. My machine has managed 132 suspend/resume cycles without a failure, or one month and six days. While not ideal, this failure frequency is perfectly manageable, while also being very tricky to test due to how infrequently it happens. This is what got recorded into the log.
Sep 19 10:56:47 snowball3 kernel: PM: suspend entry (s2idle)
Sep 19 10:56:47 snowball3 kernel: Filesystems sync: 0.063 seconds
Sep 19 17:08:51 snowball3 kernel: Freezing user space processes ... (elapsed 0.002 seconds) done.
Sep 19 17:08:51 snowball3 kernel: OOM killer disabled.
Sep 19 17:08:51 snowball3 kernel: Freezing remaining freezable tasks ... (elapsed 0.000 seconds) done.
Sep 19 17:08:51 snowball3 kernel: printk: Suspending console(s) (use no_console_suspend to debug)
Sep 19 17:08:51 snowball3 kernel: PM: suspend devices took 0.121 seconds
Sep 19 17:08:51 snowball3 kernel: ACPI: EC: interrupt blocked
Sep 19 17:08:51 snowball3 kernel: ACPI: EC: interrupt unblocked
Sep 19 17:08:51 snowball3 kernel: pci 0000:00:00.2: can't derive routing for PCI INT A
Sep 19 17:08:51 snowball3 kernel: pci 0000:00:00.2: PCI INT A: no GSI
Sep 19 17:08:51 snowball3 kernel: nvme 0000:03:00.0: AMD-Vi: Event logged [IO_PAGE_FAULT domain=0x000b address=0xc7fa0000 flags=0x0>
Sep 19 17:08:51 snowball3 kernel: nvme nvme0: 8/0/0 default/read/poll queues
Sep 19 17:08:51 snowball3 kernel: ata1: SATA link down (SStatus 0 SControl 300)
Sep 19 17:08:51 snowball3 kernel: ata2: SATA link down (SStatus 0 SControl 300)
Sep 19 17:08:51 snowball3 kernel: amdgpu 0000:04:00.0: amdgpu: failed to write reg 28b4 wait reg 28c6
Sep 19 17:08:51 snowball3 kernel: amdgpu 0000:04:00.0: amdgpu: failed to write reg 1a6f4 wait reg 1a706
Sep 19 17:08:51 snowball3 kernel: [drm] PCIE GART of 1024M enabled.
Sep 19 17:08:51 snowball3 kernel: [drm] PTB located at 0x000000F400900000
Sep 19 17:08:51 snowball3 kernel: amdgpu 0000:04:00.0: amdgpu: SMU is resuming...
Sep 19 17:08:51 snowball3 kernel: amdgpu 0000:04:00.0: amdgpu: Failed to SetDriverDramAddr!
Sep 19 17:08:51 snowball3 kernel: amdgpu 0000:04:00.0: amdgpu: Failed to setup smc hw!
Sep 19 17:08:51 snowball3 kernel: [drm:amdgpu_device_ip_resume_phase2 [amdgpu]] *ERROR* resume of IP block <smu> failed -62
Sep 19 17:08:51 snowball3 kernel: amdgpu 0000:04:00.0: amdgpu: amdgpu_device_ip_resume failed (-62).
Sep 19 17:08:51 snowball3 kernel: PM: dpm_run_callback(): pci_pm_resume+0x0/0xe0 returns -62
Sep 19 17:08:51 snowball3 kernel: amdgpu 0000:04:00.0: PM: failed to resume async: error -62
Sep 19 17:08:51 snowball3 kernel: PM: resume devices took 28.834 seconds
Sep 19 17:08:51 snowball3 kernel: ------------[ cut here ]------------
Sep 19 17:08:51 snowball3 kernel: Component: resume devices, time: 28834
Sep 19 17:08:51 snowball3 kernel: WARNING: CPU: 0 PID: 28737 at kernel/power/suspend_test.c:53 suspend_test_finish+0x71/0x80
Sep 19 17:08:51 snowball3 kernel: Modules linked in: dm_crypt trusted asn1_encoder uinput rfcomm snd_seq_dummy snd_hrtimer xt_CHECK>
Sep 19 17:08:51 snowball3 kernel: snd_intel_sdw_acpi btusb snd_hda_codec btrtl btbcm btintel libarc4 uvcvideo snd_hda_core videobu>
Sep 19 17:08:51 snowball3 kernel: CPU: 0 PID: 28737 Comm: systemd-sleep Not tainted 5.14.6-300.s0ix01.fc34.x86_64 #1
Sep 19 17:08:51 snowball3 kernel: Hardware name: ASUSTeK COMPUTER INC. ZenBook UX425IA_UM425IA/UX425IA, BIOS UX425IA.309 01/29/2021
[julas@snowball3 ~]$ sudo journalctl -k -b -1 > resume-fail-5.14.6.txt
[julas@snowball3 ~]$ sudo journalctl -k -b -1
-- Journal begins at Thu 2021-06-17 22:08:03 CEST, ends at Sun 2021-09-19 17:22:14 CEST. --
Sep 19 10:33:48 snowball3 kernel: Linux version 5.14.6-300.s0ix01.fc34.x86_64 (mockbuild@napoleon2) (gcc (GCC) 11.2.1 20210728 (Red>
Sep 19 10:33:48 snowball3 kernel: Command line: BOOT_IMAGE=(hd0,gpt5)/vmlinuz-5.14.6-300.s0ix01.fc34.x86_64 root=UUID=1b526e6f-bd6a>
Sep 19 10:33:48 snowball3 kernel: x86/fpu: Supporting XSAVE feature 0x001: 'x87 floating point registers'
Sep 19 10:33:48 snowball3 kernel: x86/fpu: Supporting XSAVE feature 0x002: 'SSE registers'
Sep 19 10:33:48 snowball3 kernel: x86/fpu: Supporting XSAVE feature 0x004: 'AVX registers'
Sep 19 10:33:48 snowball3 kernel: x86/fpu: xstate_offset[2]: 576, xstate_sizes[2]: 256
Sep 19 10:33:48 snowball3 kernel: x86/fpu: Enabled xstate features 0x7, context size is 832 bytes, using 'compacted' format.
Sep 19 10:33:48 snowball3 kernel: signal: max sigframe size: 1776
Sep 19 10:33:48 snowball3 kernel: BIOS-provided physical RAM map:
Sep 19 10:33:48 snowball3 kernel: BIOS-e820: [mem 0x0000000000000000-0x000000000009ffff] usable
Sep 19 10:33:48 snowball3 kernel: BIOS-e820: [mem 0x00000000000a0000-0x00000000000fffff] reserved
Sep 19 10:33:48 snowball3 kernel: BIOS-e820: [mem 0x0000000000100000-0x0000000009bfefff] usable
Sep 19 10:33:48 snowball3 kernel: BIOS-e820: [mem 0x0000000009bff000-0x0000000009ffffff] reserved
Sep 19 10:33:48 snowball3 kernel: BIOS-e820: [mem 0x000000000a000000-0x000000000a1fffff] usable
Sep 19 10:33:48 snowball3 kernel: BIOS-e820: [mem 0x000000000a200000-0x000000000a20ffff] ACPI NVS
Sep 19 10:33:48 snowball3 kernel: BIOS-e820: [mem 0x000000000a210000-0x00000000cae9bfff] usable
Sep 19 10:33:48 snowball3 kernel: BIOS-e820: [mem 0x00000000cae9c000-0x00000000cc37efff] reserved
Sep 19 10:33:48 snowball3 kernel: BIOS-e820: [mem 0x00000000cc37f000-0x00000000cc3d1fff] ACPI data
Sep 19 10:33:48 snowball3 kernel: BIOS-e820: [mem 0x00000000cc3d2000-0x00000000cc576fff] ACPI NVS
Sep 19 10:33:48 snowball3 kernel: BIOS-e820: [mem 0x00000000cc577000-0x00000000ccdfefff] reserved
Sep 19 10:33:48 snowball3 kernel: BIOS-e820: [mem 0x00000000ccdff000-0x00000000cdffffff] usable
Sep 19 10:33:48 snowball3 kernel: BIOS-e820: [mem 0x00000000ce000000-0x00000000cfffffff] reserved
Sep 19 10:33:48 snowball3 kernel: BIOS-e820: [mem 0x00000000f0000000-0x00000000f7ffffff] reserved
Sep 19 10:33:48 snowball3 kernel: BIOS-e820: [mem 0x00000000fd000000-0x00000000ffffffff] reserved
Sep 19 10:33:48 snowball3 kernel: BIOS-e820: [mem 0x0000000100000000-0x000000040f33ffff] usable
Sep 19 10:33:48 snowball3 kernel: BIOS-e820: [mem 0x000000040f340000-0x00000004501fffff] reserved
Sep 19 10:33:48 snowball3 kernel: NX (Execute Disable) protection: active
Sep 19 10:33:48 snowball3 kernel: e820: update [mem 0xc95ca018-0xc95d7457] usable ==> usable
Sep 19 10:33:48 snowball3 kernel: e820: update [mem 0xc95ca018-0xc95d7457] usable ==> usable
Sep 19 10:33:48 snowball3 kernel: extended physical RAM map:
Sep 19 10:33:48 snowball3 kernel: reserve setup_data: [mem 0x0000000000000000-0x000000000009ffff] usable
Sep 19 10:33:48 snowball3 kernel: reserve setup_data: [mem 0x00000000000a0000-0x00000000000fffff] reserved
Sep 19 10:33:48 snowball3 kernel: reserve setup_data: [mem 0x0000000000100000-0x0000000009bfefff] usable
Sep 19 10:33:48 snowball3 kernel: reserve setup_data: [mem 0x0000000009bff000-0x0000000009ffffff] reserved
Sep 19 10:33:48 snowball3 kernel: reserve setup_data: [mem 0x000000000a000000-0x000000000a1fffff] usable
Sep 19 10:33:48 snowball3 kernel: reserve setup_data: [mem 0x000000000a200000-0x000000000a20ffff] ACPI NVS
Sep 19 10:33:48 snowball3 kernel: reserve setup_data: [mem 0x000000000a210000-0x00000000c95ca017] usable
Sep 19 10:33:48 snowball3 kernel: reserve setup_data: [mem 0x00000000c95ca018-0x00000000c95d7457] usable
Sep 19 10:33:48 snowball3 kernel: reserve setup_data: [mem 0x00000000c95d7458-0x00000000cae9bfff] usable
Sep 19 10:33:48 snowball3 kernel: reserve setup_data: [mem 0x00000000cae9c000-0x00000000cc37efff] reserved
Sep 19 10:33:48 snowball3 kernel: reserve setup_data: [mem 0x00000000cc37f000-0x00000000cc3d1fff] ACPI data
...skipping...
Sep 19 17:08:57 snowball3 kernel: wlp1s0: authenticated
Sep 19 17:08:57 snowball3 kernel: wlp1s0: associate with 84:1b:5e:e8:36:bd (try 1/3)
Sep 19 17:08:57 snowball3 kernel: wlp1s0: RX AssocResp from 84:1b:5e:e8:36:bd (capab=0x1011 status=0 aid=2)
Sep 19 17:08:57 snowball3 kernel: wlp1s0: associated
Sep 19 17:08:57 snowball3 kernel: IPv6: ADDRCONF(NETDEV_CHANGE): wlp1s0: link becomes ready
Sep 19 17:09:02 snowball3 kernel: [drm:amdgpu_job_timedout [amdgpu]] *ERROR* ring sdma0 timeout, signaled seq=9256, emitted seq=9258
Sep 19 17:09:02 snowball3 kernel: [drm:amdgpu_job_timedout [amdgpu]] *ERROR* Process information: process pid 0 thread pid 0
Sep 19 17:09:02 snowball3 kernel: amdgpu 0000:04:00.0: amdgpu: GPU reset begin!
Sep 19 17:09:03 snowball3 kernel: amdgpu 0000:04:00.0: [drm:amdgpu_ring_test_helper [amdgpu]] *ERROR* ring kiq_2.1.0 test failed (->
Sep 19 17:09:08 snowball3 kernel: amdgpu 0000:04:00.0: amdgpu: SMU: I'm not done with your previous command!
Sep 19 17:09:08 snowball3 kernel: [drm] free PSP TMR buffer
Sep 19 17:09:10 snowball3 kernel: [drm] psp command (0x7) failed and response status is (0x0)
Sep 19 17:09:10 snowball3 kernel: [drm:psp_suspend [amdgpu]] *ERROR* Failed to terminate tmr
Sep 19 17:09:10 snowball3 kernel: [drm:amdgpu_device_ip_suspend_phase2 [amdgpu]] *ERROR* suspend of IP block <psp> failed -22
Sep 19 17:09:10 snowball3 kernel: amdgpu 0000:04:00.0: amdgpu: MODE2 reset
Sep 19 17:09:15 snowball3 kernel: amdgpu 0000:04:00.0: amdgpu: SMU: I'm not done with your previous command!
Sep 19 17:09:15 snowball3 kernel: amdgpu 0000:04:00.0: amdgpu: Mode2 reset failed!
Sep 19 17:09:15 snowball3 kernel: amdgpu 0000:04:00.0: amdgpu: ASIC reset failed with error, -62 for drm dev, 0000:04:00.0
Sep 19 17:09:15 snowball3 kernel: amdgpu 0000:04:00.0: amdgpu: GPU reset succeeded, trying to resume
Sep 19 17:09:15 snowball3 kernel: [drm] PCIE GART of 1024M enabled.
Sep 19 17:09:15 snowball3 kernel: [drm] PTB located at 0x000000F400900000
Sep 19 17:09:15 snowball3 kernel: [drm] PSP is resuming...
Sep 19 17:09:15 snowball3 kernel: [drm:psp_hw_start [amdgpu]] *ERROR* PSP create ring failed!
Sep 19 17:09:15 snowball3 kernel: [drm:psp_resume [amdgpu]] *ERROR* PSP resume failed
Sep 19 17:09:15 snowball3 kernel: [drm:amdgpu_device_fw_loading [amdgpu]] *ERROR* resume of IP block <psp> failed -62
Sep 19 17:09:15 snowball3 kernel: [drm] Skip scheduling IBs!
Sep 19 17:09:15 snowball3 kernel: [drm] Skip scheduling IBs!
Sep 19 17:09:15 snowball3 kernel: amdgpu 0000:04:00.0: amdgpu: GPU reset(1) failed
Sep 19 17:09:15 snowball3 kernel: amdgpu 0000:04:00.0: amdgpu: GPU reset end with ret = -62
Sep 19 17:09:22 snowball3 kernel: ACPI Error: Aborting method \_SB.A011 due to previous error (AE_AML_LOOP_TIMEOUT) (20210604/pspar>
Sep 19 17:09:22 snowball3 kernel: ACPI Error: Aborting method \_SB.A025 due to previous error (AE_AML_LOOP_TIMEOUT) (20210604/pspar>
Sep 19 17:09:22 snowball3 kernel: ACPI Error: Aborting method \_SB.ALIB due to previous error (AE_AML_LOOP_TIMEOUT) (20210604/pspar>
Sep 19 17:09:22 snowball3 kernel: ACPI Error: Aborting method \_SB.PCI0.SBRG.EC0.DPTC due to previous error (AE_AML_LOOP_TIMEOUT) (>
Sep 19 17:09:22 snowball3 kernel: ACPI Error: Aborting method \_SB.PCI0.SBRG.EC0._Q96 due to previous error (AE_AML_LOOP_TIMEOUT) (>
Sep 19 17:09:25 snowball3 kernel: [drm:amdgpu_job_timedout [amdgpu]] *ERROR* ring sdma0 timeout, signaled seq=9258, emitted seq=9260
Sep 19 17:09:25 snowball3 kernel: [drm:amdgpu_job_timedout [amdgpu]] *ERROR* Process information: process pid 0 thread pid 0
Sep 19 17:09:25 snowball3 kernel: amdgpu 0000:04:00.0: amdgpu: GPU reset begin!
Sep 19 17:11:13 snowball3 kernel: rfkill: input handler enabled
Sep 19 17:11:15 snowball3 kernel: snd_hda_intel 0000:04:00.6: refused to change power state from D0 to D3hot
Sep 19 17:11:45 snowball3 kernel: ACPI Error: Aborting method \M277 due to previous error (AE_AML_LOOP_TIMEOUT) (20210604/psparse-5>
Sep 19 17:11:45 snowball3 kernel: ACPI Error: Aborting method \_SB.PCI0.GP17.AZAL._PS3 due to previous error (AE_AML_LOOP_TIMEOUT) >
Sep 19 17:11:45 snowball3 kernel: acpi device:19: Failed to change power state to D3hot